tasksel (2.13) UNRELEASED; urgency=low

  * Translations
    - Stefano Canepa
      - Italian updated (debian/po). Closes: #270123
    - Carlos Z.F. Liu
      - Updated Simplified Chinese translation. (tasks/po/zh_CN.po)
    - Correct typo in Norwegian Nynork translations
      Closes: #274409
    - Correct case in French debconf translation

 -- Christian Perrier <bubulle@debian.org>  Fri,  1 Oct 2004 19:28:11 +0200

tasksel (2.12) unstable; urgency=low

  * Joey Hess
    - Support preseeding of tasksel/first.
    - Remove samba stuff from print-server, since CUPS can talk directly to
      windows clients via ipp.
  * Anton Zinoviev
    cyrillic:
     - add additional languages in Test-lang - Belarusian, Kazakh,
       Macedonian and Mongolian - they all are supported by
       console-cyrillic.  I haven't updated the description of the package
       though in order not to bother the translators.
     - me as a maintainer of this task
     - move language-env from the Key: section to the Packages: section
       cyrillic-desktop:
     - me as a maintainer of this task
     - add "t1-cyrillic" in the Key: section
     - add more scalable fonts in the Packages: section
     - uncomment the bitmap fonts for Unicode
    Closes: #271174
  * Translations
    - Bartosz Fenski
      - Polish updated (po and tasks/po). Closes: #270123

 -- Joey Hess <joeyh@debian.org>  Sun, 12 Sep 2004 17:49:21 -0400

tasksel (2.11) unstable; urgency=low

  * Joey Hess
    - Remove openoffice.org (leaving -bin), and remove all OOo -help- and
      -l10n- packages from all tasks. This is necessary because these packages
      are available for all architectures, but have broken dependencies on
      many architectures (openoffice.org-bin is only built on a few), which
      breaks installation of the tasks of which they are a part on many
      architectures.
  * Translations:
    - Håvard Korsvoll
      - Norwegian Nynorsk updates/added. Closes: #269906
    - Axel Bojer