@@ -2,15 +2,27 @@
 # because debconf sucks
 . /usr/share/debconf/confmodule
 set -e
+
 tmpfile=$1
 choices="$2"
 defaults="$3"
 question=$4
+
 db_settitle tasksel/title
 db_subst $question CHOICES "$choices"
-if [ "x$defaults" != "x-" ]; then
+
+# Allow tasksel/first to be preseeded. If it's marked as seen, then
+# it must have been preseeded, and that overrides any defaults set by
+# tasksel.
+if [ "$question" = "tasksel/first" ]; then
+	db_fget $question seen
+	if [ "$RET" = false ]; then
+		db_set $question "$defaults"
+	fi
+else
 	db_set $question "$defaults"
 fi
+
 db_input high $question || true
 db_go || true
 db_fset $question seen false
